Add skill pages, catalog, sitemap, llms.txt, and SEO improvements
- Individual skill pages at /skills/[slug] with Shiki highlighting,
  cross-linked skill references, heading anchors, and prev/next nav
- Skill catalog section on landing page and /skills index page
- llms.txt and llms-full.txt endpoints for AI discoverability
- XML sitemap via @astrojs/sitemap integration
- Centralized pillar hue colors across all components (SkillCard,
  Pillar, ReplayViewer tabs, skill page badges)
- Article meta tags (author, modified_time) for browser reader views
- Deploy workflow triggers on skills/** changes
- README updates: logo, web links, llms.txt section, contributing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [main]
     paths:
+      - skills/**
       - docs/src/**
       - docs/public/**
       - docs/package.json
